# extension_cosyvoice

./: README.md  pyproject.toml  setup.py
extension_cosyvoice/: gradio_app.py  main.py
