[project]
name = "extension-cosyvoice"
version = "0.1.6"
readme = "README.md"
description = "CosyVoice: A TTS solution for fluent and natural speech synthesis."
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
dependencies = ["cosyvoice", "gradio>=5.34.2", "modelscope>=1.27.1"]
requires-python = ">=3.12"

[tool.uv]
override-dependencies = ["librosa>=0.11.0", "numba>=0.61.2"]

[tool.uv.sources]
cosyvoice = { git = "https://github.com/nilreml/CosyVoice", rev = "main" }
